@@ -1,3 +1,8 @@
+BOARD18 2.5.4 Release Notes
+ 
+Changes from 2.5.3 Release:
+Implemented fix for Issue 91 - Problems in loadGameBox.php. 
+
 BOARD18 2.5.3 Release Notes
  
 Changes from 2.5.2 Release:
